--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="Deeznuts" />
+    <meta name="twitter:site" content="@deeznutsethcoin" />
+    <meta name="twitter:title" content="DEEZNUTS" />
+    <meta name="twitter:description" content="Deeznuts website" />
+    <meta
+      name="twitter:image"
+      content="https://www.deeznutseth.xyz/assets/img/DEEZ.jpg"
+    />
+
     <title>Deeznutscoin</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
