--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="Deeznuts" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@deeznutsethcoin" />
     <meta name="twitter:title" content="DEEZNUTS" />
     <meta name="twitter:description" content="Deeznuts website" />
